# orchestration

./: .babelrc  .ci-services.yml  .eslintignore  .eslintrc.js  .gitignore  .gitlab-ci-gfz.yml  .gitlab-ci-ufz.yml  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTE.md  Dockerfile  PersonSelect.test.js  README.md  codeassist.py  compose_down.sh  compose_up_with_tmux.sh  docker-compose-dev.yml  docker-compose-gfz-local-with-staging-vm.yml  docker-compose-ufz-local.yml  docker-compose.icessl.yml  docker-compose.yml  jest.config.js  jsconfig.json  nuxt.config.js  package-lock.json  package.json  preset-database.sh  pyproject.toml  sms-cv-entrypoint-dev.sh  start_staging_gfz.sh  styleguide.config.js  tsconfig.json
app/: .coveragerc  .dockerignore  .pylintrc  Dockerfile-dev  entrypoint.sh  manage.py  requirements.txt  setup.py  test-requirements.txt  tox.ini
app_env/: compose.env  env.example  env.template
authConfig/: oidcSettings.js
backend/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  codeassist.py  docker-compose.yml
components/: AppBarContent.vue  AppBarEditModeContent.vue  AppBarExtension.vue  AppBarTabsExtension.vue  AttachmentList.vue  AttachmentListItem.vue  CommonActionForm.vue  ConfigurationsDemoTreeView.vue  ConfigurationsPlatformDeviceMountData.vue  ConfigurationsPlatformDeviceMountForm.vue  ConfigurationsPlatformDeviceSearch.vue  ConfigurationsSelectedItem.vue  ConfigurationsSelectedItemUnmountForm.vue  ConfigurationsTreeView.vue  ContactBasicData.vue  ContactBasicDataForm.vue  ContactSelect.vue  DotMenu.vue  (+57 more)
(+2996 files in other folders)
